# pentonimo

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: brute_force.rs  candidates.rs  main.rs  pathfinding.rs  pentonimo.rs  tile.rs  tile_map.rs
