[package]
name = "pentonimo"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.0.1"
num_cpus = "1.16.0"
rustc-hash = "2.0.0"
smallvec = "1.13.2"
strum = { version = "0.26.3", features = ["derive"] }
threadpool = "1.8.1"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
# codegen-units-std = 1
panic = "abort"
